k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-todo
spec:
  selector:
    app: flask-todo
  ports:
    - port: 8080
      targetPort: 8080
