k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-todo
spec:
  to:
    kind: Service
    name: flask-todo
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
